# icb-message-agent

./: .gitmodules  README.md  build_so.sh  gen_proto.sh
agent/go/: README.md  batch_sender.go  go.mod  legal_chcker.go  legal_checker.go  packet.go  send_message.go  sender.go
agent/go/example/: main.go
agent/go/service/: send_message.pb.go  send_message_grpc.pb.go
cpp/include/: message.hpp
cpp/lib/: libmsgagent.h
cpp/src/: CMakeLists.txt  message.cc
go/: batch_sender.go  go.mod  legal_checker.go  packet.go  send_message.go  sender.go
go/cgo/: send_message_c.go
go/proto/: send_message.pb.go
proto/: send_message.proto
